# rag-chatbot

./: .gitignore  check.py  create_db_schema.py  docker-compose.yaml  pyproject.toml  test_config.py
data/: repos.txt
data/documents/: gsi_data-review-reporting_data-review-and-reporting.html.md  gsi_informatics-pipelines_assays.html.md  gsi_informatics-pipelines_informatics-pipelines.html.md  gsi_infrastructure.html.md
src/rag_chatbot/: config.py  main.py
src/rag_chatbot/agent/: __init__.py  agent_config.py  agent_factory.py  agents.py  prompt_templates.py
src/rag_chatbot/services/: vector_service.py
src/scripts/: ingest_repositories.py  scrape_doc.py  setup_chromadb.py
