[project]
name = "rag-chatbot"
version = "0.1.0"
description = "`RAG chatbot with document and code search`"
authors = [
    {name = "Gavin Peng",email = "gpeng@oicr.on.ca"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "openai (>=2.4.0,<3.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.4,<3.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "langchain-community (>=0.3.31,<0.4.0)",
    "langchain-chroma (>=0.2.6,<0.3.0)",
    "chromadb (>=1.1.1,<2.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "gitpython (>=3.1.45,<4.0.0)",
    "langchain-google-genai (>=2.1.12,<3.0.0)",
    "chainlit (>=2.8.3,<3.0.0)",
    "langchain-openai (>=0.3.35,<0.4.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
black = "^25.9.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
jupyter = "^1.1.1"
python-multipart = "^0.0.20"

